# esp8266

./: .gitignore  99-esp32.rules  99-esp8266.rules  auth_manager.py  compile_font.py  config.py  display_ui.py  ed25519.py  flash.py  flash.sh  hmac.py  il3820.py  index.html  led_manager.py  main.py  ota_manager.py  pyproject.toml  setup.html  time_manager.py  unzip.py  weather_api.py  web_server.py  wifi_manager.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: AuthSetup.vue  ControlPanel.vue  Login.vue  WiFiSetup.vue
tools/: deploy_ota.py  keygen.py  sign.py
