[project]
name = "esp8266"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-ampy>=1.1.0",
    "esptool>=5.1.0",
    "keyring>=25.7.0",
    "microdot>=2.4.0",
    "mpremote>=1.27.0",
    "mpy-cross>=1.27.0.post2",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "micropython-esp8266-stubs>=1.26.0.post1",
]
